--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
-DB_HOST=localhost
+DB_HOST=postgresql://postgresql:D9qRQoKyrTr0W4VBnUMFQxYzsE9Y0UGe@dpg-d1c0sih5pdvs73ebgb1g-a/ecommerce_db_fr8x
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=admin
-DB_NAME=ecommerce
+DB_USERNAME=postgresql
+DB_PASSWORD=D9qRQoKyrTr0W4VBnUMFQxYzsE9Y0UGe
+DB_NAME=ecommerce_db_fr8x
 NODE_ENV=production
