litle bit changes

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-PORT=3000
-DB_HOST=postgresql://postgresql:D9qRQoKyrTr0W4VBnUMFQxYzsE9Y0UGe@dpg-d1c0sih5pdvs73ebgb1g-a/ecommerce_db_fr8x
+DB_HOST=dpg-d1c0sih5pdvs73ebgb1g-a
 DB_PORT=5432
 DB_USERNAME=postgresql
 DB_PASSWORD=D9qRQoKyrTr0W4VBnUMFQxYzsE9Y0UGe
 DB_NAME=ecommerce_db_fr8x
-NODE_ENV=production
